--- a/src/components/introPage/style.scss
+++ b/src/components/introPage/style.scss
@@ -6,15 +6,13 @@ $bgImg: url('../../images/sulaTopHair/ruivaHair.jpg');
 	background-size: cover;
 	background-position: left center;
 	background-repeat: no-repeat;
-	height: 40vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 342px;
 	width: 100%;
 	overflow: hidden;
-	position: relative;
 	.shiny-button {
-		position: absolute;
-		top: 45%;
-		left: 20%;
-		display: inline-block;
 		text-align: center;
 		border-width: 1px;
 		border-style: solid;
