--- a/src/components/namePage/style.scss
+++ b/src/components/namePage/style.scss
@@ -6,7 +6,7 @@
 		display: flex;
 		flex-direction: column;
 		width: 100%;
-		height: 10vh;
+		height: 85px;
 		align-items: center;
 		justify-content: center;
 		color: #C5545E;
