feat: ajusta estrutura scss do component de captura do cliente

--- a/src/components/namePage/style.scss
+++ b/src/components/namePage/style.scss
@@ -10,6 +10,7 @@
 		align-items: center;
 		justify-content: center;
 		color: #C5545E;
+		// color: blue;
 		font-family: 'Cormorant Garamond', serif;
 		#logoName {
 			height: 370px;
