--- a/src/components/carroussel/style.scss
+++ b/src/components/carroussel/style.scss
@@ -1,13 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Playfair+Display:ital@1&display=swap');
 
-@media(max-width: 800px) {
-	.carousel-img { 
+.carousel-img { 
+  height: 100vh;
+  max-height: 500px;
+
+  img {
     height: 100%;
-    
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-	}
+    object-fit: cover;
+  }
 }
