--- a/src/components/introPage/style.scss
+++ b/src/components/introPage/style.scss
@@ -1,15 +1,14 @@
 $bgImg: url('../../images/sulaTopHair/ruivaHair.jpg');
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital@1&display=swap');
 #introPage {
+	align-items: center;
 	background-image: url('../../images/sulaTopHair/ruivaHair.jpg');
-	background-size: cover;
 	background-position: left center;
 	background-repeat: no-repeat;
+	background-size: cover;
 	display: flex;
-	justify-content: center;
-	align-items: center;
 	height: 342px;
-	width: 100%;
+	justify-content: center;
 	overflow: hidden;
 	.shiny-button {
 		text-align: center;
@@ -21,12 +20,13 @@ $bgImg: url('../../images/sulaTopHair/ruivaHair.jpg');
 		font-weight: normal;
 		font-family: sans-serif;
 		color: #FFFFFF;
-		font-size: 12px;
+		font-size: 14px;
+		font-weight: 600;
 		background-color: #383636;
-		background-image: -webkit-linear-gradient(top, #3b3838 0%, #4b4b4b 48%, #383636 49%, #383636 82%, #464444 100%);
-		background-image: -moz-linear-gradient(top, #3b3838 0%, #4b4b4b 48%, #383636 49%, #383636 82%, #464444 100%);
-		background-image: -o-linear-gradient(top, #3b3838 0%, #4b4b4b 48%, #383636 49%, #383636 82%, #464444 100%);
-		background-image: linear-gradient(top, #3b3838 0%, #4b4b4b 48%, #383636 49%, #383636 82%, #464444 100%);
+		background-image: -webkit-linear-gradient(top, #fd626f 0%, #d84e59 48%, #be4751 49%, #7a272e 82%, #662125 100%);
+		background-image: -moz-linear-gradient(top, #fd626f 0%, #d84e59 48%, #be4751 49%, #7a272e 82%, #662125 100%);
+		background-image: -o-linear-gradient(top, #fd626f 0%, #d84e59 48%, #be4751 49%, #7a272e 82%, #662125 100%);
+		background-image: linear-gradient(top, #fd626f 0%, #d84e59 48%, #be4751 49%, #7a272e 82%, #662125 100%);
 		border-color: hsl(0, 0%, 22%);
 		-webkit-box-shadow: inset 0 0 1px 1px #696666, 0 0 1px 3px rgba(0, 0, 0, 0.15);
 		-moz-box-shadow: inset 0 0 1px 1px #696666, 0 0 1px 3px rgba(0, 0, 0, 0.15);
@@ -38,7 +38,8 @@ $bgImg: url('../../images/sulaTopHair/ruivaHair.jpg');
 		-webkit-border-radius: 25px;
 		-moz-border-radius: 25px;
 		border-radius: 25px;
-		padding: 12px 30px 12px 30px;
+		padding: 12px 12px;
+		transition: transform 0.01s ease-in-out;
 	}
 	
 	.shiny-button strong {
@@ -49,10 +50,10 @@ $bgImg: url('../../images/sulaTopHair/ruivaHair.jpg');
 	.shiny-button:hover {
 		color: #FFFFFF;
 		background-color: #403d3d;
-		background-image: -webkit-linear-gradient(top, #433f3f 0%, #535353 48%, #403d3d 49%, #403d3d 82%, #4e4b4b 100%);
-		background-image: -moz-linear-gradient(top, #433f3f 0%, #535353 48%, #403d3d 49%, #403d3d 82%, #4e4b4b 100%);
-		background-image: -o-linear-gradient(top, #433f3f 0%, #535353 48%, #403d3d 49%, #403d3d 82%, #4e4b4b 100%);
-		background-image: linear-gradient(top, #433f3f 0%, #535353 48%, #403d3d 49%, #403d3d 82%, #4e4b4b 100%);
+		background-image: -webkit-linear-gradient(top, #eeadad 0%, #ac5a60 20%, #9b4f54 21%, #7a272e 82%, #662125 100%);
+		background-image: -moz-linear-gradient(top, #eeadad 0%, #ac5a60 20%, #9b4f54 21%, #7a272e 82%, #662125 100%);
+		background-image: -o-linear-gradient(top, #eeadad 0%, #ac5a60 20%, #9b4f54 21%, #7a272e 82%, #662125 100%);
+		background-image: linear-gradient(top, #eeadad 0%, #ac5a60 20%, #9b4f54 21%, #7a272e 82%, #662125 100%);
 		border-color: hsl(0, 0%, 25%);
 		-webkit-box-shadow: inset 0 0 1px 1px #6f6a6a, 0 0 1px 3px rgba(0, 0, 0, 0.15);
 		-moz-box-shadow: inset 0 0 1px 1px #6f6a6a, 0 0 1px 3px rgba(0, 0, 0, 0.15);
@@ -70,6 +71,21 @@ $bgImg: url('../../images/sulaTopHair/ruivaHair.jpg');
 		background-image: -moz-linear-gradient(top, #2b2929 0%, #383636 100%);
 		background-image: -o-linear-gradient(top, #2b2929 0%, #383636 100%);
 		background-image: linear-gradient(top, #2b2929 0%, #383636 100%);
-		padding: 13px 30px 11px 30px;
+		transform: scale(1.05);
+	}
+}
+
+@media screen and (min-width: 770px) {
+	#introPage {
+		background-position: left;
+		height: 680px;
+		.shiny-button {
+			padding: 16px 30px;
+			transition: transform 0.3s ease-in-out;
+		}
+
+		.shiny-button:hover {
+			transform: scale(1.1);
+		}
 	}
 }
