--- a/src/components/Calender/styles.scss
+++ b/src/components/Calender/styles.scss
@@ -1,7 +1,17 @@
+colors {
+  --gray-1: rgb(233, 233, 233);
+  --gray-2: rgb(192, 192, 192);
+  --gray-3: rgb(161, 161, 161);
+  --gray-4: rgb(172, 172, 172);
+  --gray-5: rgb(126, 126, 126);
+  --gray-7: rgb(75, 75, 75);
+}
+
 .calendar-container {
-  border: 1px solid green;
-  width: 250px;
+  border: 1px solid rgb(75, 75, 75);
   border-radius: 8px;
+  box-shadow: 2px 2px 4px rgb(192, 192, 192);
+  width: 250px;
   -webkit-touch-callout: none;  /* iPhone OS, Safari */
   -webkit-user-select: none;    /* Chrome, Safari 3 */
   -khtml-user-select: none;     /* Safari 2 */
@@ -13,7 +23,7 @@
     align-items: center;
     background-color: rgb(192, 192, 192);
     border-radius: 8px 8px 0 0;
-    color: rgb(80, 80, 80);
+    color: rgb(75, 75, 75);
     display: flex;
     font-size: small;
     justify-content: center;
@@ -47,7 +57,7 @@
 
     .arrow-calendar:hover {
       cursor: pointer;
-      color: black;
+      color: rgb(75, 75, 75);
     }
   }
 
@@ -60,18 +70,31 @@
     .cell-calendar {
       align-items: center;
       border-radius: 50%;
-      color: rgb(172, 172, 172);
       display: flex;
       height: 14.28%;
       justify-content: center;
       width: 14.28%;
       transition: background-color 0.3s;
     }
-
+    
     .text-black {
-      color: rgb(73, 73, 73);
+      color: black;
+      font-weight: 500;
     }
-  
+
+    .text-gray {
+      color: rgb(116, 116, 116);
+    }
+    
+    .text-ligth-gray {
+      color: rgb(116, 116, 116);
+      text-decoration: line-through;
+    }
+
+    .currente-date {
+      background-color: greenyellow;
+    }
+
     .cell-calendar-hover:hover {
       background-color: rgb(233, 233, 233);
       cursor: pointer;
