refactor: seta variáveis para os tons de cinza no css do calendário e remove códigos inutilizados

--- a/src/components/Calendar/styles.scss
+++ b/src/components/Calendar/styles.scss
@@ -4,13 +4,14 @@ colors {
   --gray-3: rgb(161, 161, 161);
   --gray-4: rgb(172, 172, 172);
   --gray-5: rgb(126, 126, 126);
+  --gary-6: rgb(116, 116, 116);
   --gray-7: rgb(75, 75, 75);
 }
 
 .calendar-container {
-  border: 1px solid rgb(75, 75, 75);
+  border: 1px solid var(gray-7);
   border-radius: 8px;
-  box-shadow: 2px 2px 4px rgb(192, 192, 192);
+  box-shadow: 2px 2px 4px var(gray-2);
   width: 250px;
   -webkit-touch-callout: none;  /* iPhone OS, Safari */
   -webkit-user-select: none;    /* Chrome, Safari 3 */
@@ -21,9 +22,9 @@ colors {
   
   .top-header-calendar {
     align-items: center;
-    background-color: rgb(192, 192, 192);
+    background-color: var(gray-2);
     border-radius: 8px 8px 0 0;
-    color: rgb(75, 75, 75);
+    color: var(gray-7);
     display: flex;
     font-size: small;
     justify-content: center;
@@ -32,12 +33,12 @@ colors {
   }
 
   .top-header-calendar:hover {
-    background-color: rgb(161, 161, 161);
+    background-color: var(gray-3);
     cursor: pointer;
   }
 
   .top-header-calendar:active {
-    background-color: rgb(126, 126, 126);
+    background-color: var(gray-5);
   }
   
   .header-calendar {
@@ -49,7 +50,7 @@ colors {
     .arrow-calendar {
       align-items: center;
       border-radius: 50%;
-      color: rgb(172, 172, 172);
+      color: var(gray-4);
       display: flex;
       justify-content: center;
       transition: background-color 0.3s;
@@ -57,7 +58,7 @@ colors {
 
     .arrow-calendar:hover {
       cursor: pointer;
-      color: rgb(75, 75, 75);
+      color: var(gray-7);
     }
   }
 
@@ -83,11 +84,11 @@ colors {
     }
 
     .text-gray {
-      color: rgb(116, 116, 116);
+      color: var(gray-6);
     }
 
     .text-ligth-gray {
-      color: rgb(116, 116, 116);
+      color: var(gray-6);
       text-decoration: line-through;
     }
 
@@ -96,7 +97,7 @@ colors {
     }
 
     .cell-calendar-hover:hover {
-      background-color: rgb(233, 233, 233);
+      background-color: var(gray-1);
       cursor: pointer;
     }
   }
